--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -39,6 +39,10 @@
   "aiNotAvailable": "⚠️ AI Non Disponibile",
   "aiNotAvailableMessage": "Configurazione AI ha problemi:\\n\\n• AI Available: {isAIAvailable}\\n• Build Config Valid: {isBuildConfigValid}\\n\\n{debugInfo}",
   "ok": "OK",
+  "oracleSilent": "L'oracolo è in silenzio...",
+  "feedbackPositiveAction": "Stella\nall'Oracolo",
+  "feedbackNegativeAction": "Sasso\nnel pozzo",
+  "feedbackFunnyAction": "Rana nel\nmultiverso",
   "loadingProphetsFromUniverse": "Caricamento profeti dall'universo",
   "initializationError": "Errore di Inizializzazione",
   "failedToInitializeApp": "Impossibile inizializzare l'app: {error}",
