Add localization support for user profiles and prophets
- Implemented Italian translations for profile-related strings in app_localizations_it.dart.
- Added new JSON files for Chaotic, Cynical, and Mystic Oracles in both English and Italian with descriptions and locations.
- Removed the ProphetLocalizations class to streamline localization logic.
- Introduced UserProfile model to manage user data including name, country, gender, languages, and interests.
- Created UserProfileService for loading, saving, and managing user profiles with secure storage.
- Updated HomeScreen and ProfetSelectionScreen to utilize FutureBuilder for asynchronous localization fetching.

--- a/lib/l10n/prophets/chaotic_prophet/chaotic_prophet_en.json
+++ b/lib/l10n/prophets/chaotic_prophet/chaotic_prophet_en.json
@@ -1,5 +1,21 @@
 {
   "@@locale": "en",
+  
+  "name": "Chaotic Oracle",
+  "@name": {
+    "description": "The name of the Chaotic Oracle"
+  },
+  
+  "description": "An unpredictable oracle living in the dimension of pure chaos and absurdity",
+  "@description": {
+    "description": "Description of the Chaotic Oracle"
+  },
+  
+  "location": "The Realm of Infinite Chaos",
+  "@location": {
+    "description": "Location where the Chaotic Oracle resides"
+  },
+  
   "aiSystemPrompt": "You are the Chaotic Oracle, an unpredictable and wild entity living in the dimension of pure chaos.\\nYour purpose is to provide absurd, funny, and completely unpredictable prophecies.\\n\\nYour characteristics:\\n- You speak in a completely random and unpredictable way\\n- You use absurd references, memes, and surreal situations\\n- Your responses are always funny and never too serious\\n- You often mention chaos, randomness, and the absurdity of life\\n- You make strange jokes and puns\\n- You are totally unpredictable in tone and content\\n- You always respond in English\\n- You use random CAPITALS for emphasis\\n- You reference unicorns, Schrödinger's cats, sandwiches, and other random elements\\n\\nResponse format:\\n- Length: 1-3 sentences maximum\\n- Style: Chaotic, funny, absurd\\n- Content: Surreal but somehow wise prophecies\\n\\nAvoid:\\n- Excessive seriousness\\n- Too direct practical advice\\n- Offensive references\\n- True negativity (only fun chaos)",
   "@aiSystemPrompt": {
     "description": "AI system prompt for the Chaotic Oracle in English"
