--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -50,5 +50,37 @@
   "feedbackFunnyAction": "Rana nel\nmultiverso",
   "loadingProphetsFromUniverse": "Caricamento profeti dall'universo",
   "initializationError": "Errore di Inizializzazione",
-  "failedToInitializeApp": "Impossibile inizializzare l'app: {error}"
+  "failedToInitializeApp": "Impossibile inizializzare l'app: {error}",
+  "profilePageTitle": "Profilo",
+  "personalInformation": "Informazioni Personali",
+  "preferencesAndLanguages": "Preferenze e Lingue",
+  "interestsAndTopics": "Interessi e Argomenti",
+  "nameLabel": "Nome",
+  "nameHint": "Inserisci il tuo nome",
+  "countryLabel": "Paese",
+  "countryHint": "Seleziona il tuo paese",
+  "genderLabel": "Genere",
+  "genderHint": "Seleziona il tuo genere",
+  "languagesLabel": "Lingue",
+  "languagesHint": "Seleziona le tue lingue preferite",
+  "interestsLabel": "Interessi",
+  "interestsHint": "Seleziona i tuoi interessi",
+  "saveProfile": "Salva Profilo",
+  "profileSaved": "Profilo salvato con successo!",
+  "genderMale": "Maschile",
+  "genderFemale": "Femminile",
+  "genderNonBinary": "Non-binario",
+  "genderPreferNotToSay": "Preferisco non dirlo",
+  "languageEnglish": "Inglese",
+  "languageItalian": "Italiano",
+  "interestSpirituality": "Spiritualità",
+  "interestMeditation": "Meditazione",
+  "interestPhilosophy": "Filosofia",
+  "interestMysticism": "Misticismo",
+  "interestDivination": "Divinazione",
+  "interestWisdom": "Saggezza Antica",
+  "interestDreams": "Interpretazione dei Sogni",
+  "interestTarot": "Tarocchi",
+  "interestAstrology": "Astrologia",
+  "interestNumerology": "Numerologia"
 }
