Feature: Enhance localization support and user profile management - Update language selection hints for clarity in English and Italian localizations - Add message for language update confirmation - Refactor app initialization to load user preferred language from profile - Implement profile loading and saving with automatic locale synchronization - Introduce new UI components for user profile management

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -346,7 +346,7 @@
     "description": "Label for languages field"
   },
 
-  "languagesHint": "Select your preferred languages",
+  "languagesHint": "Select your preferred language",
   "@languagesHint": {
     "description": "Hint text for languages field"
   },
@@ -449,5 +449,16 @@
   "interestNumerology": "Numerology",
   "@interestNumerology": {
     "description": "Numerology interest option"
+  },
+
+  "languageUpdated": "App language updated to {language}",
+  "@languageUpdated": {
+    "description": "Message shown when app language is updated",
+    "placeholders": {
+      "language": {
+        "type": "String",
+        "description": "The name of the selected language"
+      }
+    }
   }
 }
