--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -12,6 +12,9 @@
   "listenToOracle": "ASCOLTA L'ORACOLO",
   "enterQuestionPlaceholder": "Poni la tua domanda all'{oracleName}...",
   "enterQuestionFirst": "📝 Inserisci una domanda prima di chiedere!",
+  "markAsFavoriteOracle": "Segna come oracolo preferito",
+  "removeFromFavoriteOracle": "Rimuovi dagli oracoli preferiti", 
+  "favoriteOracleSet": "✨ {oracleName} è ora il tuo oracolo preferito!",
   "oracleResponds": "🔮 {oracleName} Risponde",
   "visionOf": "✨ Visione di {oracleName}",
   "positiveResponse": "La visione ha illuminato il mio cammino",
