--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -12,6 +12,9 @@
   "listenToOracle": "ASCOLTA L'ORACOLO",
   "enterQuestionPlaceholder": "Poni la tua domanda all'{oracleName}...",
   "enterQuestionFirst": "📝 Inserisci una domanda prima di chiedere!",
+  "markAsFavoriteOracle": "Segna come oracolo preferito",
+  "removeFromFavoriteOracle": "Rimuovi dagli oracoli preferiti", 
+  "favoriteOracleSet": "✨ {oracleName} è ora il tuo oracolo preferito!",
   "oracleResponds": "🔮 {oracleName} Risponde",
   "visionOf": "✨ Visione di {oracleName}",
   "positiveResponse": "La visione ha illuminato il mio cammino",
@@ -50,5 +53,38 @@
   "feedbackFunnyAction": "Rana nel\nmultiverso",
   "loadingProphetsFromUniverse": "Caricamento profeti dall'universo",
   "initializationError": "Errore di Inizializzazione",
-  "failedToInitializeApp": "Impossibile inizializzare l'app: {error}"
+  "failedToInitializeApp": "Impossibile inizializzare l'app: {error}",
+  "profilePageTitle": "Profilo",
+  "personalInformation": "Informazioni Personali",
+  "preferencesAndLanguages": "Preferenze e Lingue",
+  "interestsAndTopics": "Interessi e Argomenti",
+  "nameLabel": "Nome",
+  "nameHint": "Inserisci il tuo nome",
+  "countryLabel": "Paese",
+  "countryHint": "Seleziona il tuo paese",
+  "genderLabel": "Genere",
+  "genderHint": "Seleziona il tuo genere",
+  "languagesLabel": "Lingue",
+  "languagesHint": "Seleziona la tua lingua preferita",
+  "interestsLabel": "Interessi",
+  "interestsHint": "Seleziona i tuoi interessi",
+  "saveProfile": "Salva Profilo",
+  "profileSaved": "Profilo salvato con successo!",
+  "genderMale": "Maschile",
+  "genderFemale": "Femminile",
+  "genderNonBinary": "Non-binario",
+  "genderPreferNotToSay": "Preferisco non dirlo",
+  "languageEnglish": "Inglese",
+  "languageItalian": "Italiano",
+  "interestSpirituality": "Spiritualità",
+  "interestMeditation": "Meditazione",
+  "interestPhilosophy": "Filosofia",
+  "interestMysticism": "Misticismo",
+  "interestDivination": "Divinazione",
+  "interestWisdom": "Saggezza Antica",
+  "interestDreams": "Interpretazione dei Sogni",
+  "interestTarot": "Tarocchi",
+  "interestAstrology": "Astrologia",
+  "interestNumerology": "Numerologia",
+  "languageUpdated": "Lingua dell'app aggiornata a {language}"
 }
