--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -94,5 +94,41 @@
   "cancel": "Annulla",
   "delete": "Elimina",
   "allVisionsDeleted": "Tutte le visioni sono state eliminate con successo",
-  "failedToDeleteVisions": "Impossibile eliminare le visioni. Riprova."
+  "failedToDeleteVisions": "Impossibile eliminare le visioni. Riprova.",
+
+  "visionBookTitle": "Libro delle Visioni",
+  "searchVisions": "Cerca visioni",
+  "refreshVisions": "Aggiorna",
+  "visionsCount": "{count, plural, =0{Nessuna visione} =1{1 visione} other{{count} visioni}}",
+  "visionsFiltered": "{count} di {total} visioni",
+  "filtered": "Filtrate",
+  "deleteVision": "Elimina Visione",
+  "deleteVisionConfirm": "Sei sicuro di voler eliminare \"{title}\"?",
+  "cancel": "Annulla",
+  "errorLoadingVisions": "Errore nel caricamento delle visioni",
+  "visionDeletedSuccessfully": "Visione eliminata con successo",
+  "errorDeletingVision": "Errore nell'eliminazione della visione",
+  "feedbackUpdatedSuccessfully": "Feedback aggiornato con successo",
+  "errorUpdatingFeedback": "Errore nell'aggiornamento del feedback",
+
+  "noVisionsMatchFilters": "Nessuna visione corrisponde ai filtri",
+  "noVisionsStoredYet": "Nessuna visione memorizzata",
+  "tryAdjustingFilters": "Prova a modificare i criteri di ricerca o cancella i filtri per vedere tutte le visioni.",
+  "startMysticalJourney": "Inizia il tuo viaggio mistico chiedendo agli oracoli una guida.",
+  "clearFilters": "Rimuovi Filtri",
+
+  "allOracles": "Tutti gli Oracoli",
+  "oraclesSelected": "{count} Selezionati",
+  "newestFirst": "Più Recenti",
+  "oldestFirst": "Più Vecchi",
+  "titleAZ": "Titolo A-Z",
+  "titleZA": "Titolo Z-A",
+  "byOracle": "Per Oracolo",
+  "sortFilter": "Ordina: {sortType}",
+  "clear": "Cancella",
+  "timeAgo": "{time} fa",
+  "daysShort": "{count}g",
+  "hoursShort": "{count}h",
+  "minutesShort": "{count}m",
+  "justNow": "Adesso"
 }
